# media-monitoring

./: .env  package.json  pnpm-lock.yaml
ai/api/: config.py  pyproject.toml
ai/api/app/: server.py
ai/api/app/api/: on_demand.py  routes.py
ai/api/app/prompt/: theme_prompt.py
ai/api/app/res/: error.py
ai/api/app/schema/: constants.py  on_demand_schema.py
ai/api/app/service/: on_demand_service.py  openai_service.py
ai/keywords-extract/: main.py  pyproject.toml
ai/keywords-extract/notebooks/: file.ipynb
ai/keywords-extract/service/: lang_configuration.py
ai/sentimental_analysis/: .gitignore  main.py  pyproject.toml
ai/sentimental_analysis/notebooks/: multiple_model.ipynb
ai/sentimental_analysis/service/: sentiment.py
backend/: .coveragerc  .gitignore  README.md  main.py  makefile  piccolo_conf.py  pyproject.toml
backend/app/: __init__.py  config.py  logger.py  main.py
backend/app/api/: news.py  proxy.py
backend/app/core/: config.py  logger.py
backend/app/core/database/: __init__.py
backend/app/core/database/migrations/: migrate.py
backend/app/core/database/migrations/clickhouse/: 001_create_news_schema.sql  migrate.py
backend/app/core/database/migrations/piccolo/: app_2025_03_09t23_49_55_723696.py
backend/app/core/database/repositories/: news.py
backend/app/core/models/: __init__.py  news.py  users.py
backend/app/core/schemas/: news.py
backend/app/core/schemas/filters/: __init__.py  news.py
backend/app/dto/: news.py
backend/app/repo/: __init__.py  news.py
backend/app/types/filters/: news.py
backend/migrations-clickhouse/: migrate.py
backend/tests/core/: test_base_filter.py
backend/tests/core/repositories/: test_news.py
backend/tests/v1/endpoints/: test_news.py  test_proxy.py
backend/v1/: api.py  dependencies.py
backend/v1/endpoints/: news.py  proxy.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FilterBar.tsx  Header.tsx  MentionsCard.tsx  NewsCard.tsx  PicksForYou.tsx  ResultsScreen.tsx  SearchScreen.tsx  SentimentBadge.tsx  StatsCard.tsx  TopSourcesCard.tsx  TopStories.tsx  TrendingTags.tsx
frontend/src/components/skeletons/: TopStoriesSkeleton.tsx
frontend/src/lib/config/: axios-instance.ts  axios-interceptors.ts
frontend/src/lib/providers/: tanstack-provider.tsx
frontend/src/services/: news.service.tsx
frontend/src/types/: news.ts
keywords-extract/: pyproject.toml
keywords-extract/notebooks/: file.ipynb
sentimental_analysis/: .gitignore  file.ipynb  main.py  multiple_model.ipynb  pyproject.toml
sentimental_analysis/cpu/: pyproject.toml
sentimental_analysis/notebooks/: file.ipynb
src/app/: globals.css  layout.tsx
src/app/admin/: layout.tsx
src/app/admin/crawler/: page.tsx
src/app/dashboard/article-feed/: page.tsx
src/app/dashboard/article-feed/legacy/: page.tsx
src/app/dashboard/kpi/: page.tsx
src/app/dashboard/searches/: page.tsx
src/components/ui/: date-range-picker.tsx
src/constants/: data.ts
src/features/KPI/components/: articles-tab.tsx  media-analysis-tab.tsx  share-of-voice-tab.tsx  trending-tab.tsx
src/lib/types/: news.ts
src/providers/: react-query-provider.tsx
src/services/: news.service.tsx
