[tool.poetry]
name = "keyword-extract"
version = "1.0.0"
description = "Extracting-Keywords"
authors = ["Muhammad Umar Anzar <63141196+umar-anzar@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"

[tool.poetry.group.keyword-extract.dependencies]
yake = "^0.4.8"
langdetect = "^1.0.9"
stopwordsiso = "^0.6.1"
setuptools = "^75.8.0" # Important for stopwordsiso


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"