[tool.poetry]
name = "fastapi-base"
version = "1.0.0"
description = "Base file structure of fast api"
authors = ["Muhammad Umar Anzar <63141196+umar-anzar@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-src-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-src-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
numpy = "^1.26.4"
transformers = "^4.47.1"


[tool.poetry.group.torch.dependencies]
torch = {version = "2.5.1+cu121", source = "pytorch-src-cuda"}
# torch = {version = "^2.2.0+cpu", source = "pytorch-src-cpu"}



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"